add arch unit test layers for testing and more decoupling from neo4j impl